# nms-webui

./: .env.example  .gitattributes  .gitignore  PROJECT_STRUCTURE.md  README.md  chromium-wrapper  instances.sample.yaml  mediamtx.yml  modules_state.json  requirements.txt  run_backend.sh  run_telegraf.sh  run_webui.sh  run_worker.sh  sse_out.txt  telegraf.conf  telegraf.conf.example  webui_settings.json
backend/: __init__.py  aggregator.py  astra_client.py  config.py  health_checker.py  main.py  pyproject.toml  tasks.py  telegraf_metrics.py  utils.py  webui_settings.py
backend/core/: __init__.py  app.py  auth.py  config.py  database.py  events.py  exceptions.py  logger.py  module_registry.py  module_router.py  module_state.py  ui_manifest.py  webui_settings.py
backend/core/plugin/: __init__.py  api.py  context.py  loader.py  manifest.py  registry.py  resolver.py
backend/modules/: README.md  __init__.py  base.py
backend/modules/aggregates/: __init__.py  api.py  manifest.yaml
backend/modules/astra/: __init__.py  api.py  manifest.yaml  models.py  module.py  services.py
backend/modules/settings/: __init__.py  api.py  manifest.yaml
backend/modules/stream/: README.md  __init__.py  api.py  capture.py  config.py  manifest.yaml  manifest_schema.json  module.py  playback.py  playback_api.py  process_manager.py  utils.py
backend/modules/telegraf/: __init__.py  manifest.yaml
backend/stream/: __init__.py  capture.py  playback.py  stream_backends.py  ts_analyzer.py  udp_to_http.py  udp_to_http_backends.py
backend/stream/backends/: __init__.py  astra.py  base.py  (+6 more)
(+195 files in other folders)
