[tool.poetry]
name = "NMS-WebUI-Backend"
version = "0.1.0"
description = "NMS-WebUI — backend (FastAPI + plugin system)"
authors = ["NMS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
httpx = ">=0.26.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
pyyaml = ">=6.0"
celery = ">=5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
